--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,1 +1,31 @@
-<h1> welcome </h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8"
+          name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Title</title>
+    <link href="../bootstrap-4.1.3-dist/css/bootstrap.min.css"
+          rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" type="text/css"/>
+
+</head>
+
+<body>
+    <div class="container">
+        <h1>
+            Welcome to Web Development!
+        </h1>
+        <li>
+            <a href="../login/login.template.client.html">
+                Login
+            </a>
+        </li>
+        <li>
+            <a href="../course-list/course-list.template.client.html">
+                Course List
+            </a>
+        </li>
+
+    </div>
+</body>
