--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,12 +17,12 @@
             Welcome to Web Development!
         </h1>
         <li>
-            <a href="../login/login.template.client.html">
+            <a href="./login/login.template.client.html">
                 Login
             </a>
         </li>
         <li>
-            <a href="../course-list/course-list.template.client.html">
+            <a href="./course-list/course-list.template.client.html">
                 Course List
             </a>
         </li>
